<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/settings_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimaryDark"
        app:theme="@style/ThemeOverlay.AppCompat.ActionBar"/>

    <TextView
        android:text="@string/settings_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/detectedFont_interval"
        android:textSize="@dimen/SettingsText_size"
        android:id="@+id/txt_settings_header" />

    <Switch
        android:text="@string/phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/detectedFont_interval"
        android:textColor="@color/colorAccentLight"
        android:id="@+id/switch_phone" />

    <Switch
        android:text="@string/web_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/detectedFont_interval"
        android:textColor="@color/colorAccentLight"
        android:id="@+id/switch_url" />


    <TextView
        android:id="@+id/txt_settings_history_header"
        android:text="@string/history_settings_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/detectedFont_interval"
        android:textSize="@dimen/SettingsText_size" />

    <Switch
        android:id="@+id/switch_history"
        android:text="@string/save_history"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/detectedFont_interval"
        android:textColor="@color/colorAccentLight"/>

    <TextView
        android:id="@+id/txt_history_depth"
        android:text="@string/history_depth_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/detectedFont_interval"
        android:textSize="@dimen/SettingsText_size" />

    <SeekBar
        android:id="@+id/seek_history_depth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="50" />


</LinearLayout>