<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_ocr_history_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".8"
                android:padding="@dimen/sp12_size"
                android:text="@string/detection_history"
                android:textAppearance="@android:style/TextAppearance.Holo.DialogWindowTitle" />

            <CheckBox
                android:id="@+id/chk_trash_all"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/sp6_size"
                android:layout_marginEnd="@dimen/sp12_size"
                android:layout_marginStart="@dimen/sp12_size"
                android:layout_marginTop="@dimen/sp6_size"

                android:checked="false" />

            <ImageButton
                android:id="@+id/bnt_trash"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/sp6_size"
                android:layout_marginEnd="@dimen/sp12_size"
                android:layout_marginStart="@dimen/sp12_size"
                android:layout_marginTop="@dimen/sp6_size"
                android:layout_weight=".1"
                android:background="@drawable/shutter_button_bckg"
                android:scaleType="fitCenter"
                android:src="@mipmap/ic_trash" />
        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_ocr_history"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/detectedFont_interval"
            android:scrollbars="vertical"/>

        <TextView
            android:id="@+id/txt_ocr_history_empty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:visibility="gone"
            android:text="@string/no_history_available" />

        <Button
            android:id="@+id/btn_ocr_history_cancel"
            android:text="@string/cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
</layout>